Moved fonts, added new partials.

--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -1,158 +1,268 @@
 /*********************
 BREAKPOINTS
 *********************/
+html {
+  font-size: 100%;
+  line-height: 1.5em; }
+
 @font-face {
   font-family: "montserrat black";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-black-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-black-webfont.woff2") format("woff2"), url("/fonts/montserrat-black-webfont.woff") format("woff"), url("/fonts/montserrat-black-webfont.ttf") format("truetype"), url("/fonts/montserrat-black-webfont.svg#montserrat black") format("svg"); }
+  src: url("../fonts/montserrat-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-black-webfont.woff2") format("woff2"), url("../fonts/montserrat-black-webfont.woff") format("woff"), url("../fonts/montserrat-black-webfont.ttf") format("truetype"), url("../fonts/montserrat-black-webfont.svg#montserrat black") format("svg"); }
 
 @font-face {
   font-family: "montserrat bold";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-bold-webfont.woff2") format("woff2"), url("/fonts/montserrat-bold-webfont.woff") format("woff"), url("/fonts/montserrat-bold-webfont.ttf") format("truetype"), url("/fonts/montserrat-bold-webfont.svg#montserrat bold") format("svg"); }
+  src: url("../fonts/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.woff") format("woff"), url("../fonts/montserrat-bold-webfont.ttf") format("truetype"), url("../fonts/montserrat-bold-webfont.svg#montserrat bold") format("svg"); }
 
 @font-face {
   font-family: "montserrat extrabold";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-extrabold-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-extrabold-webfont.woff2") format("woff2"), url("/fonts/montserrat-extrabold-webfont.woff") format("woff"), url("/fonts/montserrat-extrabold-webfont.ttf") format("truetype"), url("/fonts/montserrat-extrabold-webfont.svg#montserrat extrabold") format("svg"); }
+  src: url("../fonts/montserrat-extrabold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-extrabold-webfont.woff2") format("woff2"), url("../fonts/montserrat-extrabold-webfont.woff") format("woff"), url("../fonts/montserrat-extrabold-webfont.ttf") format("truetype"), url("../fonts/montserrat-extrabold-webfont.svg#montserrat extrabold") format("svg"); }
 
 @font-face {
   font-family: "montserrat harline";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-harline-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-harline-webfont.woff2") format("woff2"), url("/fonts/montserrat-harline-webfont.woff") format("woff"), url("/fonts/montserrat-harline-webfont.ttf") format("truetype"), url("/fonts/montserrat-harline-webfont.svg#montserrat harline") format("svg"); }
+  src: url("../fonts/montserrat-harline-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-harline-webfont.woff2") format("woff2"), url("../fonts/montserrat-harline-webfont.woff") format("woff"), url("../fonts/montserrat-harline-webfont.ttf") format("truetype"), url("../fonts/montserrat-harline-webfont.svg#montserrat harline") format("svg"); }
 
 @font-face {
   font-family: "montserrat light";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-light-webfont.woff2") format("woff2"), url("/fonts/montserrat-light-webfont.woff") format("woff"), url("/fonts/montserrat-light-webfont.ttf") format("truetype"), url("/fonts/montserrat-light-webfont.svg#montserrat light") format("svg"); }
+  src: url("../fonts/montserrat-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat-light-webfont.woff") format("woff"), url("../fonts/montserrat-light-webfont.ttf") format("truetype"), url("../fonts/montserrat-light-webfont.svg#montserrat light") format("svg"); }
 
 @font-face {
   font-family: "montserrat regular";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-regular-webfont.woff2") format("woff2"), url("/fonts/montserrat-regular-webfont.woff") format("woff"), url("/fonts/montserrat-regular-webfont.ttf") format("truetype"), url("/fonts/montserrat-regular-webfont.svg#montserrat regular") format("svg"); }
+  src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat-regular-webfont.woff") format("woff"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../fonts/montserrat-regular-webfont.svg#montserrat regular") format("svg"); }
 
 @font-face {
   font-family: "montserrat semibold";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-semibold-webfont.woff2") format("woff2"), url("/fonts/montserrat-semibold-webfont.woff") format("woff"), url("/fonts/montserrat-semibold-webfont.ttf") format("truetype"), url("/fonts/montserrat-semibold-webfont.svg#montserrat semibold") format("svg"); }
+  src: url("../fonts/montserrat-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-semibold-webfont.woff2") format("woff2"), url("../fonts/montserrat-semibold-webfont.woff") format("woff"), url("../fonts/montserrat-semibold-webfont.ttf") format("truetype"), url("../fonts/montserrat-semibold-webfont.svg#montserrat semibold") format("svg"); }
 
 @font-face {
   font-family: "montserrat ultralight";
   font-style: normal;
   font-weight: eot svg ttf woff woff2;
-  src: url("/fonts/montserrat-ultralight-webfont.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-ultralight-webfont.woff2") format("woff2"), url("/fonts/montserrat-ultralight-webfont.woff") format("woff"), url("/fonts/montserrat-ultralight-webfont.ttf") format("truetype"), url("/fonts/montserrat-ultralight-webfont.svg#montserrat ultralight") format("svg"); }
+  src: url("../fonts/montserrat-ultralight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-ultralight-webfont.woff2") format("woff2"), url("../fonts/montserrat-ultralight-webfont.woff") format("woff"), url("../fonts/montserrat-ultralight-webfont.ttf") format("truetype"), url("../fonts/montserrat-ultralight-webfont.svg#montserrat ultralight") format("svg"); }
 
-a:link {
-  font: 1em/1.8em 'montserrat regular', Arial, Helvetica, sans-serif;
-  color: #4080b0;
+body {
+  margin: 0; }
+
+.l-page {
+  margin-top: 0rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  margin-bottom: 0rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-family: "montserrat regular", arial, helvetica, sans-serif;
+  color: #404040;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem; }
+  .l-page h1, .l-page h2, .l-page h3, .l-page h4, .l-page h5, .l-page h6 {
+    color: #00703c; }
+  .l-page h1 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+    margin-top: 0rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.75rem;
+    font-family: "montserrat ultralight", arial, helvetica, sans-serif; }
+  .l-page h2 {
+    font-size: 2rem;
+    line-height: 3rem;
+    margin-top: 1.5rem;
+    padding-top: 1.05rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.675rem;
+    border-top-width: 0.0625rem;
+    border-top-style: dotted;
+    padding-top: 1.4375rem;
+    font-family: "montserrat light", arial, helvetica, sans-serif; }
+  .l-page h3 {
+    font-size: 1.4rem;
+    line-height: 3rem;
+    margin-top: 0.75rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.45rem;
+    font-family: "montserrat regular", arial, helvetica, sans-serif; }
+  .l-page h4 {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    margin-top: 0.75rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.45rem;
+    font-family: "montserrat semibold", arial, helvetica, sans-serif; }
+  .l-page h5 {
+    font-size: 0.85rem;
+    line-height: 1.5rem;
+    margin-top: 0.75rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.75rem;
+    font-family: "montserrat semibold", arial, helvetica, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.1em; }
+  .l-page h6 {
+    font-size: 0.85rem;
+    line-height: 1.5rem;
+    margin-top: 0.75rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 0.75rem;
+    font-family: "montserrat regular", arial, helvetica, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.1em; }
+  .l-page em {
+    font-style: italic; }
+  .l-page strong {
+    font-family: "montserrat semibold", arial, helvetica, sans-serif; }
+  .l-page blockquote {
+    padding-right: 1.4em;
+    padding-left: 1.4em; }
+  .l-page p, .l-page ul, .l-page ol {
+    line-height: 1.8rem;
+    font-family: "montserrat light", arial, helvetica, sans-serif;
+    margin-top: 0rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    margin-bottom: 1.35rem;
+    color: #404040; }
+  .l-page ul {
+    padding-left: 1.2em; }
+  .l-page ol {
+    padding-left: 1.4em; }
+  .l-page ul li {
+    color: #c84d54;
+    list-style: square;
+    padding-left: 0.2em; }
+  .l-page ol li {
+    list-style: decimal; }
+  .l-page p + ul,
+  .l-page p + ol {
+    margin-top: -0.9em; }
+  .l-page a {
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in; }
+    .l-page a:link, .l-page a:visited {
+      border-bottom-width: 0.0625rem;
+      border-bottom-style: dotted;
+      padding-bottom: 1.4375rem;
+      color: #4080b0;
+      padding-bottom: 1px;
+      text-decoration: none; }
+    .l-page a:hover {
+      color: #005696;
+      border-bottom-color: #4080b0;
+      border-bottom-style: solid; }
+    .l-page a:active {
+      color: #c84d54;
+      border-bottom: 1px solid #da888d; }
+
+.l-header {
+  padding-top: 1rem;
+  margin-bottom: 2rem; }
+
+.l-branding .top-link {
+  text-align: right;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  margin-left: auto; }
+
+.l-branding .logo {
+  width: 18.75rem;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  margin-left: auto; }
+  .l-branding .logo a {
+    border-bottom: none; }
+
+.l-branding .l-utilities {
+  margin-bottom: 1.5rem;
+  padding: 1rem;
+  background: #404040;
+  border-radius: 0.2rem; }
+  .l-branding .l-utilities::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .l-branding .l-utilities .main-menu {
+    width: 13.7931034483%;
+    float: left;
+    margin-right: 3.4482758621%; }
+  .l-branding .l-utilities .search {
+    width: 82.7586206897%;
+    float: right;
+    margin-right: 0;
+    text-align: right; }
+
+.main-menu .menu-line {
+  margin: 0.4375rem 0;
+  background: #ededed;
+  border-radius: 2px;
+  height: 0.1875rem;
+  width: 2.5rem; }
+
+.search .form-submit {
+  -webkit-transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+  color: #ededed;
+  background-color: #4080b0;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 0.125rem;
   text-decoration: none;
-  border-bottom: 1px dotted #CCC;
-  padding-bottom: 1px; }
+  padding: 0.5rem;
+  border: none;
+  font-size: 1rem;
+  line-height: 1.5rem; }
+  .search .form-submit:hover {
+    color: #000000;
+    background-color: #7faaca; }
+  .search .form-submit:active {
+    color: #ededed;
+    background-color: #da888d; }
 
-a:hover {
-  color: #005696;
-  border-bottom: 1px solid #4080b0; }
+.search .form-search {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-top: -3px;
+  font-family: "montserrat light", arial, helvetica, sans-serif;
+  background: #ededed;
+  border-radius: 0.125rem;
+  border: none;
+  color: #404040;
+  padding: 0.5rem;
+  vertical-align: middle;
+  width: 80%; }
+  .search .form-search::-webkit-input-placeholder {
+    color: #7f7f7f;
+    font-family: "montserrat light", arial, helvetica, sans-serif; }
+  .search .form-search::-moz-placeholder {
+    color: #7f7f7f;
+    font-family: "montserrat light", arial, helvetica, sans-serif; }
+  .search .form-search:-moz-placeholder {
+    color: #7f7f7f;
+    font-family: "montserrat light", arial, helvetica, sans-serif; }
+  .search .form-search:-ms-input-placeholder {
+    color: #7f7f7f;
+    font-family: "montserrat light", arial, helvetica, sans-serif; }
 
-a:active {
-  color: #c84d54;
-  border-bottom: 1px solid #da888d; }
+.search label {
+  display: none; }
 
-a:visited {
-  color: #4080b0;
-  border-bottom: 1px dotted #CCC; }
-
-h1 {
-  font: normal 3em/1 'montserrat ultralight', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: .5em; }
-
-h2 {
-  font: normal 2em/1.2 'montserrat light', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: 0.45em;
-  padding-top: 1em;
-  border-top: 1px dotted #CCC;
-  margin-top: 0.7em; }
-
-h3 {
-  font: normal 1.4em/1.2 'montserrat regular', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: 0.3em;
-  padding-top: 0.5em; }
-
-h4 {
-  font: normal 1.1em/1.3 'montserrat semibold', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: 0.3em;
-  padding-top: 0.5em; }
-
-h5 {
-  font: normal .85em/1.45 'montserrat semibold', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: 0.5em;
-  padding-top: 0.5em;
-  text-transform: uppercase;
-  letter-spacing: 0.1em; }
-
-h6 {
-  font: normal .85em/1.4 'montserrat regular', Arial, Helvetica, sans-serif;
-  color: #00703c;
-  padding-bottom: 0.5em;
-  padding-top: 0.5em;
-  text-transform: uppercase;
-  letter-spacing: 0.1em; }
-
-em {
-  font-style: italic; }
-
-strong {
-  font-family: 'montserrat semibold'; }
-
-blockquote {
-  padding-right: 1.4em;
-  padding-left: 1.4em; }
-
-p, ul, ol {
-  font: 1em/1.6em 'montserrat light', Arial, Helvetica, sans-serif;
-  color: #333;
-  padding-bottom: .9em; }
-
-ul {
-  padding-left: 1.2em;
-  color: #099; }
-
-ol {
-  padding-left: 1.4em; }
-
-ul li {
-  color: #c84d54;
-  list-style: square;
-  padding-left: 0.2em; }
-
-ol li {
-  list-style: decimal; }
-
-.li-override {
-  /* Overrides ol li text colour via a <span> */
-  color: #333; }
-
-p + ul,
-p + ol {
-  margin-top: -0.9em; }
-
-hr {
-  height: 0;
-  padding-top: 0.6em;
-  margin-bottom: 0.3em;
-  clear: both;
-  border-right: none;
-  border-left: none;
-  border-top: none;
-  border-bottom: 1px dotted #cccccc; }
+.search h2 {
+  display: none; }
