--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -14,3 +14,6 @@
 @import "components/header";
 @import "components/menu";
 @import "components/search";
+@import "components/footer";
+@import "components/main";
+@import "components/page";
